changing news structure to use an HTML tabl

--- a/news.html
+++ b/news.html
@@ -161,13 +161,32 @@ body > .container {
   <h2>What's New</h2>
 </div>
 
-<ul>
-    <li>ReproZip will be presented at <a href="https://www.force11.org/meetings/force2016" target="_blank">FORCE2016</a>.</li>
-    <li>ReproZip is listed on the <a href="http://www.artifact-eval.org/guidelines.html" target="_blank">Artifact Evaluation Process guidelines</a>.</li>
-    <li>ReproZip v1.0.2 has been <a href="https://github.com/ViDA-NYU/reprozip/releases/tag/1.0.2" target="_blank">released</a>.</li>
-    <li>ReproZip is the recommended tool for the Reproducibility Section of the <a href="http://www.journals.elsevier.com/information-systems/" target="_blank">Information Systems Journal, Elsevier</a>.</li>
-    <li>ReproZip is the recommended tool for the <a href="http://db-reproducibility.seas.harvard.edu/" target="_blank">ACM SIGMOD 2015 Reproducibility Review</a>.</li>
-</ul>
+<table style="width:100%">
+  <tr>
+    <td>[Jan 27, 2016]</td>
+    <td>ReproZip will be presented at <a href="https://www.force11.org/meetings/force2016" target="_blank">FORCE2016</a>.</td> 
+  </tr>
+  <tr>
+    <td>[Dec 02, 2015]</td>
+    <td>ReproZip v1.0.3 has been <a href="https://github.com/ViDA-NYU/reprozip/releases/tag/1.0.3" target="_blank">released</a>.</td> 
+  </tr>
+  <tr>
+    <td>[Nov 06, 2015]</td>
+    <td>ReproZip is listed on the <a href="http://www.artifact-eval.org/guidelines.html" target="_blank">Artifact Evaluation Process guidelines</a>.</td> 
+  </tr>
+  <tr>
+    <td>[Oct 26, 2015]</td>
+    <td>ReproZip v1.0.2 has been <a href="https://github.com/ViDA-NYU/reprozip/releases/tag/1.0.2" target="_blank">released</a>.</td> 
+  </tr>
+  <tr>
+    <td>[June, 2015]</td>
+    <td>ReproZip is the recommended tool for the Reproducibility Section of the <a href="http://www.journals.elsevier.com/information-systems/" target="_blank">Information Systems Journal, Elsevier</a>.</td> 
+  </tr>
+  <tr>
+    <td>[May, 2015]</td>
+    <td>ReproZip is the recommended tool for the <a href="http://db-reproducibility.seas.harvard.edu/" target="_blank">ACM SIGMOD 2015 Reproducibility Review</a>.</td> 
+  </tr>
+</table>
 
 <div class="page-header" id="presentations">
     <h2>Presentations</h2>
