--- a/news.html
+++ b/news.html
@@ -163,6 +163,10 @@ body > .container {
 
 <table style="width:100%">
   <tr>
+    <td>[Feb 27, 2016]</td>
+    <td>ReproZip will be demoed at <a href="http://sigmod2016.org/" target="_blank">SIGMOD 2016</a>.</td> 
+  </tr>
+  <tr>
     <td>[Jan 27, 2016]</td>
     <td>ReproZip will be presented at <a href="https://www.force11.org/meetings/force2016" target="_blank">FORCE2016</a>.</td> 
   </tr>
@@ -290,6 +294,13 @@ Providence, RI, December 2012
 <div class="page-header" id="publications">
     <h2>Publications</h2>
 </div>
+
+<h4>2016</h4>
+
+<p><i>ReproZip: Computational Reproducibility With Ease</i>,
+F. Chirigati, R. Rampin, D. Shasha, and J. Freire.
+In Proceedings of the 2016 International Conference on Management of Data (SIGMOD), Demo Session, 2016
+<br/><br/></p>
 
 <h4>2013</h4>
 
