Updates to Web site.

--- a/news.html
+++ b/news.html
@@ -83,6 +83,20 @@ body > .container {
     color: #777;
     text-align: center;
 }
+
+/* table */
+
+.date {
+    width:10px;
+    vertical-align:top;
+    padding-bottom:10px;
+}
+
+.news {
+    width:250px;
+    vertical-align:top;
+    padding-bottom:10px;
+}
     </style>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -161,34 +175,38 @@ body > .container {
   <h2>What's New</h2>
 </div>
 
-<table style="width:100%">
+<table style="width:90%">
   <tr>
-    <td>[Feb 27, 2016]</td>
-    <td>ReproZip will be demoed at <a href="http://sigmod2016.org/" target="_blank">SIGMOD 2016</a>.</td> 
+    <td class="date"><b>[Mar 02, 2016]</b></td>
+    <td class="news">The ReproZip team has been invited to participate in <a href="https://daspos.crc.nd.edu/index.php/workshops/container-strategies-for-data-software-preservation-that-promote-open-science" target="_blank">Container Strategies for Data & Software Preservation that Promote Open Science</a>, a workshop held at Notre Dame by the NSF-funded <a href="https://daspos.crc.nd.edu/" target="_blank">DASPOS</a> team.</td>
   </tr>
   <tr>
-    <td>[Jan 27, 2016]</td>
-    <td>ReproZip will be presented at <a href="https://www.force11.org/meetings/force2016" target="_blank">FORCE2016</a>.</td> 
+    <td class="date"><b>[Feb 27, 2016]</b></td>
+    <td class="news">ReproZip will be demoed at <a href="http://sigmod2016.org/" target="_blank">SIGMOD 2016</a>.</td> 
   </tr>
   <tr>
-    <td>[Dec 02, 2015]</td>
-    <td>ReproZip v1.0.3 has been <a href="https://github.com/ViDA-NYU/reprozip/releases/tag/1.0.3" target="_blank">released</a>.</td> 
+    <td class="date"><b>[Jan 27, 2016]</b></td>
+    <td class="news">ReproZip will be presented at <a href="https://www.force11.org/meetings/force2016" target="_blank">FORCE2016</a>.</td> 
   </tr>
   <tr>
-    <td>[Nov 06, 2015]</td>
-    <td>ReproZip is listed on the <a href="http://www.artifact-eval.org/guidelines.html" target="_blank">Artifact Evaluation Process guidelines</a>.</td> 
+    <td class="date"><b>[Dec 02, 2015]</b></td>
+    <td class="news">ReproZip v1.0.3 has been <a href="https://github.com/ViDA-NYU/reprozip/releases/tag/1.0.3" target="_blank">released</a>.</td> 
   </tr>
   <tr>
-    <td>[Oct 26, 2015]</td>
-    <td>ReproZip v1.0.2 has been <a href="https://github.com/ViDA-NYU/reprozip/releases/tag/1.0.2" target="_blank">released</a>.</td> 
+    <td class="date"><b>[Nov 06, 2015]</b></td>
+    <td class="news">ReproZip is listed on the <a href="http://www.artifact-eval.org/guidelines.html" target="_blank">Artifact Evaluation Process guidelines</a>.</td> 
   </tr>
   <tr>
-    <td>[June, 2015]</td>
-    <td>ReproZip is the recommended tool for the Reproducibility Section of the <a href="http://www.journals.elsevier.com/information-systems/" target="_blank">Information Systems Journal, Elsevier</a>.</td> 
+    <td class="date"><b>[Oct 26, 2015]</b></td>
+    <td class="news">ReproZip v1.0.2 has been <a href="https://github.com/ViDA-NYU/reprozip/releases/tag/1.0.2" target="_blank">released</a>.</td> 
   </tr>
   <tr>
-    <td>[May, 2015]</td>
-    <td>ReproZip is the recommended tool for the <a href="http://db-reproducibility.seas.harvard.edu/" target="_blank">ACM SIGMOD 2015 Reproducibility Review</a>.</td> 
+    <td class="date"><b>[June, 2015]</b></td>
+    <td class="news">ReproZip is the recommended tool for the Reproducibility Section of the <a href="http://www.journals.elsevier.com/information-systems/" target="_blank">Information Systems Journal, Elsevier</a>.</td> 
+  </tr>
+  <tr>
+    <td class="date"><b>[May, 2015]</b></td>
+    <td class="news">ReproZip is the recommended tool for the <a href="http://db-reproducibility.seas.harvard.edu/" target="_blank">ACM SIGMOD 2015 Reproducibility Review</a>.</td> 
   </tr>
 </table>
 
