--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ iframe {
                     <li><a href="news.html#posters">Posters</a></li>
                 </ul>
             </li>
-            <li><a href="http://reprozip.readthedocs.org/">Documentation</a></li>
+            <li><a href="https://reprozip.readthedocs.org/">Documentation</a></li>
             <li><a href="https://github.com/ViDA-NYU/reprozip">GitHub Project</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">PyPI Packages<span class="caret"></span></a>
@@ -214,9 +214,9 @@ result: -17.814</span></code></pre></div>
 
 <p>ReproZip works by tracing the systems calls used by the experiment to automatically identify which files should be included. You can review and edit this list and the metadata before creating the final package file.</p>
 
-<p>Packages can be reproduced in different ways, including chroot environments, <a href="http://www.vagrantup.com/">Vagrant</a>-built virtual machines, and <a href="http://www.docker.com/">Docker</a> containers; more can be added through plugins.</p>
+<p>Packages can be reproduced in different ways, including chroot environments, <a href="https://www.vagrantup.com/">Vagrant</a>-built virtual machines, and <a href="https://www.docker.com/">Docker</a> containers; more can be added through plugins.</p>
 
-<p>For more information, check out the <a href="http://reprozip.readthedocs.org/">full documentation</a>.</p>
+<p>For more information, check out the <a href="https://reprozip.readthedocs.org/">full documentation</a>.</p>
 
 <div class="page-header" id="why">
     <h2>Why ReproZip?</h2>
@@ -226,11 +226,11 @@ result: -17.814</span></code></pre></div>
 
 <p>The truth is computational reproducibility can be very painful to achieve for a number of reasons. Take the author-reviewer scenario of a scientific paper as an example. Authors must generate a compendium that encapsulates all the inputs needed to correctly reproduce their experiments: the data, a complete specification of the experiment and its steps, and information about the originating computational environment (OS, hardware architecture, and library dependencies). Keeping track of this information manually is rarely feasible: it is both time-consuming and error-prone. First, computational environments are complex, consisting of many layers of hardware and software, and the configuration of the OS is often hidden. Second, tracking library dependencies is challenging, especially for large experiments. If authors did not plan for it since the beginning of the project, reproducibility is drastically hampered.</p>
 
-<p>For reviewers, even with a compendium in their hands, it may be hard to reproduce the results. There may be no instructions about how to execute the code and explore it further; the experiment may not run on his operating system; there may be missing libraries; library versions may be different; and several issues may arise while trying to install all the required dependencies, a problem colloquially known as <a href="http://en.wikipedia.org/wiki/Dependency_hell" target="_blank">dependency hell</a>.</p>
+<p>For reviewers, even with a compendium in their hands, it may be hard to reproduce the results. There may be no instructions about how to execute the code and explore it further; the experiment may not run on his operating system; there may be missing libraries; library versions may be different; and several issues may arise while trying to install all the required dependencies, a problem colloquially known as <a href="https://en.wikipedia.org/wiki/Dependency_hell" target="_blank">dependency hell</a>.</p>
 
-<p><a href="http://reprozip.readthedocs.org/">ReproZip</a> helps alleviate these problems by allowing the user to easily capture all the necessary components in a single, distributable package. Also, the tool makes it easier to reproduce an experiment by providing different unpacking methods and interfaces that avoids the need to install all the required dependencies and that makes it possible to run the experiment under different inputs.</p>
+<p><a href="https://reprozip.readthedocs.org/">ReproZip</a> helps alleviate these problems by allowing the user to easily capture all the necessary components in a single, distributable package. Also, the tool makes it easier to reproduce an experiment by providing different unpacking methods and interfaces that avoids the need to install all the required dependencies and that makes it possible to run the experiment under different inputs.</p>
 
-<p>The following video shows how to use ReproZip to make your experiment reproducible. The example used in the video is based on a <a href="http://scikit-learn.org/stable/auto_examples/plot_digits_classification.html" target="_blank">tutorial</a> from the scikit-learn Python library and is available for download <a href="http://bigdata.poly.edu/~fchirigati/others/example.zip">here</a>.</p>
+<p>The following video shows how to use ReproZip to make your experiment reproducible. The example used in the video is based on a <a href="http://scikit-learn.org/stable/auto_examples/classification/plot_digits_classification.html" target="_blank">tutorial</a> from the scikit-learn Python library and is available for download <a href="http://bigdata.poly.edu/~fchirigati/others/example.zip">here</a>.</p>
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/-zLPuwCHXo0" frameborder="0" allowfullscreen></iframe>
 
@@ -255,7 +255,7 @@ F. Chirigati, R. Rampin, D. Shasha, and J. Freire.
 In Proceedings of the 2016 International Conference on Management of Data (SIGMOD), Demo Session, 2016</p>
 </div>
 
-<p>To reference our Web site, please use <a href="https://vida-nyu.github.io/reprozip" target="_blank">https://vida-nyu.github.io/reprozip</a>.</p>
+<p>To reference our Web site, please use <a href="https://vida-nyu.github.io/reprozip/" target="_blank">https://vida-nyu.github.io/reprozip</a>.</p>
 
 <p>For a complete list of publications, posters, and presentations, please visit
 <a href="news.html" target="_blank">News</a>.</p>
@@ -267,7 +267,7 @@ In Proceedings of the 2016 International Conference on Management of Data (SIGMO
 <p>ReproZip is currently being developed at <a href="http://engineering.nyu.edu/">NYU</a>. The team includes:</p>
 <ul>
   <li><a href="http://bigdata.poly.edu/~fchirigati/" target="_blank">Fernando Chirigati</a></li>
-  <li><a href="http://remram.fr/" target="_blank">R&eacute;mi Rampin</a></li>
+  <li><a href="https://remram.fr/" target="_blank">R&eacute;mi Rampin</a></li>
   <li><a href="http://bigdata.poly.edu/~juliana/" target="_blank">Juliana Freire</a></li>
   <li><a href="http://cs.nyu.edu/shasha/" target="_blank">Dennis Shasha</a></li>
 </ul>
