[DOCS] Including link to reprozip-examples repository.

--- a/index.html
+++ b/index.html
@@ -230,7 +230,13 @@ result: -17.814</span></code></pre></div>
 
 <p><a href="https://reprozip.readthedocs.org/">ReproZip</a> helps alleviate these problems by allowing the user to easily capture all the necessary components in a single, distributable package. Also, the tool makes it easier to reproduce an experiment by providing different unpacking methods and interfaces that avoids the need to install all the required dependencies and that makes it possible to run the experiment under different inputs.</p>
 
-<p>The following video shows how to use ReproZip to make your experiment reproducible. The example used in the video is based on a <a href="http://scikit-learn.org/stable/auto_examples/classification/plot_digits_classification.html" target="_blank">tutorial</a> from the scikit-learn Python library and is available for download <a href="http://bigdata.poly.edu/~fchirigati/others/example.zip">here</a>.</p>
+<div class="page-header" id="examples">
+  <h2>Examples</h2>
+</div>
+
+<p>Various examples of ReproZip packages, including instructions on how to reproduce them, are available in the <a href="https://github.com/ViDA-NYU/reprozip-examples/" target="_blank">reprozip-examples</a> GitHub repository.</p>
+
+<p>The following video shows how to use ReproZip to make your experiment reproducible. The example used in the video is based on a <a href="http://scikit-learn.org/stable/auto_examples/classification/plot_digits_classification.html" target="_blank">tutorial</a> from the scikit-learn Python library and is available for download <a href="https://github.com/ViDA-NYU/reprozip-examples/tree/master/digits-sklearn-images" target="_blank">here</a>.</p>
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/-zLPuwCHXo0" frameborder="0" allowfullscreen></iframe>
 
