--- a/news.html
+++ b/news.html
@@ -176,6 +176,10 @@ body > .container {
 </div>
 
 <table style="width:90%">
+<tr>
+    <td class="date"><b>[Mar 10, 2016]</b></td>
+    <td class="news">We now have a <a href="https://github.com/ViDA-NYU/reprozip-examples/" target="_blank">GitHub repository</a> with examples of ReproZip packages! Check it out!</td>
+  </tr>
   <tr>
     <td class="date"><b>[Mar 02, 2016]</b></td>
     <td class="news">The ReproZip team has been invited to participate in <a href="https://daspos.crc.nd.edu/index.php/workshops/container-strategies-for-data-software-preservation-that-promote-open-science" target="_blank">Container Strategies for Data & Software Preservation that Promote Open Science</a>, a workshop held at Notre Dame by the NSF-funded <a href="https://daspos.crc.nd.edu/" target="_blank">DASPOS</a> team.</td>
