--- a/news.html
+++ b/news.html
@@ -158,8 +158,8 @@ body > .container {
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Installers<span class="caret"></span></a>
                 <ul class="dropdown-menu" role="menu">
-                    <li><a href="https://github.com/ViDA-NYU/reprozip/releases/download/1.0.2/reprounzip-1.0.2-setup.exe">Windows</a></li>
-                    <li><a href="https://github.com/ViDA-NYU/reprozip/releases/download/1.0.2/reprounzip-1.0.2.pkg">Mac OS X</a></li>
+                    <li><a href="https://github.com/ViDA-NYU/reprozip/releases/download/1.0.4/reprounzip-1.0.4-setup.exe">Windows</a></li>
+                    <li><a href="https://github.com/ViDA-NYU/reprozip/releases/download/1.0.4/reprounzip-1.0.4.pkg">Mac OS X</a></li>
                     <li><a href="https://anaconda.org/ViDA-NYU" target="_blank">Anaconda</a></li>
                 </ul>
             </li>
@@ -176,7 +176,11 @@ body > .container {
 </div>
 
 <table style="width:90%">
-<tr>
+  <tr>
+    <td class="date"><b>[Mac 10, 2016]</b></td>
+    <td class="news">ReproZip v1.0.4 has been <a href="https://github.com/ViDA-NYU/reprozip/releases/tag/1.0.4" target="_blank">released</a>.</td> 
+  </tr>
+  <tr>
     <td class="date"><b>[Mar 10, 2016]</b></td>
     <td class="news">We now have a <a href="https://github.com/ViDA-NYU/reprozip-examples/" target="_blank">GitHub repository</a> with examples of ReproZip packages! Check it out!</td>
   </tr>
