[DOCS] Small fix.

--- a/news.html
+++ b/news.html
@@ -177,7 +177,7 @@ body > .container {
 
 <table style="width:90%">
   <tr>
-    <td class="date"><b>[Mac 10, 2016]</b></td>
+    <td class="date"><b>[Mar 10, 2016]</b></td>
     <td class="news">ReproZip v1.0.4 has been <a href="https://github.com/ViDA-NYU/reprozip/releases/tag/1.0.4" target="_blank">released</a>.</td> 
   </tr>
   <tr>
