--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@ iframe {
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Installers<span class="caret"></span></a>
                 <ul class="dropdown-menu" role="menu">
-                    <li><a href="https://github.com/ViDA-NYU/reprozip/releases/download/1.0.4/reprounzip-1.0.4-setup.exe">Windows</a></li>
-                    <li><a href="https://github.com/ViDA-NYU/reprozip/releases/download/1.0.4/reprounzip-1.0.4.pkg">Mac OS X</a></li>
+                    <li><a href="https://github.com/ViDA-NYU/reprozip/releases/download/1.0.4/reprounzip-1.0.4-1-setup.exe">Windows</a></li>
+                    <li><a href="https://github.com/ViDA-NYU/reprozip/releases/download/1.0.4/reprounzip-1.0.4-1.pkg">Mac OS X</a></li>
                     <li><a href="https://anaconda.org/ViDA-NYU" target="_blank">Anaconda</a></li>
                 </ul>
             </li>
