Add a meta 'description'

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="ReproZip is a tool that simplifies the process of creating reproducible experiments from command-line executions, a frequent task in computational science.">
+    <meta name="author" content="ViDA at NYU">
     <link rel="icon" href="favicon.ico">
 
     <title>ReproZip - About</title>
