Adding new poster.

--- a/news.html
+++ b/news.html
@@ -350,6 +350,13 @@ In Proceedings of the 5th USENIX conference on Theory and Practice of Provenance
     <h2>Posters</h2>
 </div>
 
+<h4>2016</h4>
+
+<p id="force2016"><i><a href="http://bigdata.poly.edu/~fchirigati/posters/chirigati-force2016.pdf" target="_blank">Enhancing Scholarly Communication with ReproZip</a></i>,
+F, Chirigati, R. Rampin, V. Steeves, D. Shasha, and J. Freire.
+In FORCE2016 Conference, 2016
+<br/><br/></p>
+
 <h4>2013</h4>
 
 <p><i><a href="http://bigdata.poly.edu/~fchirigati/posters/chirigati-sigmod2013.pdf" target="_blank">Packing Experiments for Sharing and Publication</a></i>,
