Update documentation links to readthedocs.io

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ iframe {
                     <li><a href="news.html#posters">Posters</a></li>
                 </ul>
             </li>
-            <li><a href="https://reprozip.readthedocs.org/">Documentation</a></li>
+            <li><a href="https://reprozip.readthedocs.io/">Documentation</a></li>
             <li><a href="https://github.com/ViDA-NYU/reprozip">GitHub Project</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">PyPI Packages<span class="caret"></span></a>
@@ -216,7 +216,7 @@ result: -17.814</span></code></pre></div>
 
 <p>Packages can be reproduced in different ways, including chroot environments, <a href="https://www.vagrantup.com/">Vagrant</a>-built virtual machines, and <a href="https://www.docker.com/">Docker</a> containers; more can be added through plugins.</p>
 
-<p>For more information, check out the <a href="https://reprozip.readthedocs.org/">full documentation</a>.</p>
+<p>For more information, check out the <a href="https://reprozip.readthedocs.io/">full documentation</a>.</p>
 
 <div class="page-header" id="why">
     <h2>Why ReproZip?</h2>
@@ -228,7 +228,7 @@ result: -17.814</span></code></pre></div>
 
 <p>For reviewers, even with a compendium in their hands, it may be hard to reproduce the results. There may be no instructions about how to execute the code and explore it further; the experiment may not run on his operating system; there may be missing libraries; library versions may be different; and several issues may arise while trying to install all the required dependencies, a problem colloquially known as <a href="https://en.wikipedia.org/wiki/Dependency_hell" target="_blank">dependency hell</a>.</p>
 
-<p><a href="https://reprozip.readthedocs.org/">ReproZip</a> helps alleviate these problems by allowing the user to easily capture all the necessary components in a single, distributable package. Also, the tool makes it easier to reproduce an experiment by providing different unpacking methods and interfaces that avoids the need to install all the required dependencies and that makes it possible to run the experiment under different inputs.</p>
+<p><a href="https://reprozip.readthedocs.io/">ReproZip</a> helps alleviate these problems by allowing the user to easily capture all the necessary components in a single, distributable package. Also, the tool makes it easier to reproduce an experiment by providing different unpacking methods and interfaces that avoids the need to install all the required dependencies and that makes it possible to run the experiment under different inputs.</p>
 
 <div class="page-header" id="examples">
   <h2>Examples</h2>
