--- a/news.html
+++ b/news.html
@@ -143,7 +143,7 @@ body > .container {
                     <li><a href="#posters">Posters</a></li>
                 </ul>
             </li>
-            <li><a href="http://reprozip.readthedocs.org/">Documentation</a></li>
+            <li><a href="http://reprozip.readthedocs.io/">Documentation</a></li>
             <li><a href="https://github.com/ViDA-NYU/reprozip">GitHub Project</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">PyPI Packages<span class="caret"></span></a>
